[package]
name = "eggshell"
version = "0.1.2"
edition = "2018"
authors = ["Erik Hollensbe <linux@hollensbe.org>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]
description = "Remove testing docker containers after this object goes away"
homepage = "https://github.com/zerotier/eggshell"
repository = "https://github.com/zerotier/eggshell"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["docker", "testing", "containers", "zerotier"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = ">= 0"
thiserror = ">= 0"
tokio = { version = ">= 0", features = ["full"] }
async-trait = ">= 0"
lazy_static = ">= 0"
